--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "multiplier"]
 	path = multiplier
-	url = git@github.com:lshift/multiplier
+	url = git@github.com:ash-lshift/multimaster-6000
